--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "webpack",
-    "start": "node ./server/app-server.js"
+    "start": "node ./server/app-server.js",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/duncanleung/twitter-sentiment.git"
+    "url": "git+"
   },
   "keywords": [
     "twitter",
@@ -19,9 +21,9 @@
   "author": "Duncan Leung",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/duncanleung/twitter-sentiment/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/duncanleung/twitter-sentiment#readme",
+  "homepage": "https://[Ozzyjtjustin].github.io/[CryptoFeels-Sentiment-Tracker]/",
   "dependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
@@ -33,6 +35,7 @@
     "d3": "^3.5.12",
     "datumbox": "^1.0.1",
     "express": "^4.13.3",
+    "gh-pages": "^1.2.0",
     "immutability-helper": "^2.1.1",
     "node-uuid": "^1.4.7",
     "react": "^15.4.2",
