--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "prestart": "webpack",
     "start": "node ./server/app-server.js",
-    "build":"react-scripts build",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "react": "^15.4.2",
     "react-addons-update": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-scripts": "^1.1.4",
     "request": "^2.67.0",
     "sentiment": "^1.0.5",
     "socket.io": "^1.3.7",
